feat: add route register
