# handlers/auth.go
@@ -2,14 +2,28 @@ package handlers
 
 import (
 	"net/http"
+	"sync"
 	"time"
 
 	"github.com/gin-gonic/gin"
 	"github.com/isaiaspereira307/gopvp/configs"
+	"github.com/isaiaspereira307/gopvp/internal/db"
 	"golang.org/x/crypto/bcrypt"
 
 	"github.com/golang-jwt/jwt/v5"
 )
+
+var (
+	lastID int32
+	mu     sync.Mutex
+)
+
+func generateUniqueID() int32 {
+	mu.Lock()
+	defer mu.Unlock()
+	lastID++
+	return lastID
+}
 
 // @BasePath /api/v1
 // @Summary Login
@@ -57,4 +71,60 @@ func Login(ctx *gin.Context) {
 	}
 
 	ctx.JSON(http.StatusOK, gin.H{"token": tokenString})
+}
+
+// @BasePath /api/v1
+// @Summary Register
+// @Description Register
+// @Tags register
+// @Accept json
+// @Produce json
+// @Param request body RegisterRequest true "Register Params"
+// @Success 200 {object} RegisterResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /register [post]
+func Register(ctx *gin.Context) {
+	var req RegisterRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(req.Password), bcrypt.DefaultCost)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to hash password"})
+		return
+	}
+
+	user := db.CreateUserParams{
+		ID:          generateUniqueID(),
+		FirstName:   req.FirstName,
+		LastName:    req.LastName,
+		Password:    string(hashedPassword),
+		Email:       req.Email,
+		IsActive:    true,
+		IsStaff:     false,
+		IsSuperuser: false,
+		LastLogin:   time.Now(),
+		DateJoined:  time.Now(),
+	}
+
+	if err := queries.CreateUser(ctx, user); err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create user"})
+		return
+	}
+
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
+		"email": user.Email,
+		"exp":   time.Now().Add(time.Hour * 72).Unix(),
+	})
+
+	tokenString, err := token.SignedString([]byte(configs.GetJwtSecret()))
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to generate token"})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, RegisterResponse{Token: tokenString})
 }
