# handlers/request.go
@@ -33,3 +33,14 @@ func (r *CredentialsRequest) Validate() error {
 
 	return nil
 }
+
+type RegisterRequest struct {
+	FirstName string `json:"first_name" binding:"required"`
+	LastName  string `json:"last_name" binding:"required"`
+	Password  string `json:"password" binding:"required"`
+	Email     string `json:"email" binding:"required,email"`
+}
+
+type RegisterResponse struct {
+	Token string `json:"token"`
+}
